--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "casex": "^3.0.0",
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
+    "fibers": "^4.0.1",
     "glob": "^7.1.4",
     "gray-matter": "^4.0.2",
     "hastscript": "^5.0.0",
