--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "coverage": "jest --coverage",
-    "dev": "NODE_ENV=development nodemon -w src -x 'node -r dotenv/config' src/index.js",
+    "dev": "NODE_ENV=development node src/cli.js testdir/ --base-path=dist",
     "lint": "eslint src",
     "prettier": "prettier --write '**/*.{js,json,css,md,ts,tsx}'",
     "preversion": "npm run test -s",
