--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "bulma": "^0.7.4",
     "casex": "^3.0.0",
     "chalk": "^2.4.2",
+    "chokidar": "^3.0.0",
     "dotenv": "^7.0.0",
     "fibers": "^4.0.1",
     "glob": "^7.1.4",
     "gray-matter": "^4.0.2",
     "hastscript": "^5.0.0",
+    "http-server": "^0.11.1",
+    "lodash.debounce": "^4.0.8",
     "ms": "^2.1.1",
     "rehype-document": "^3.0.0",
     "rehype-stringify": "^5.0.0",
@@ -49,7 +52,6 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "http-server": "^0.11.1",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "lint-staged": "^8.1.4",
