--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
     "@types/sass": "^1.16.0",
     "@types/yargs": "^13.0.0",
