--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "fibers": "^4.0.1",
     "glob": "^7.1.4",
     "gray-matter": "^4.0.2",
+    "hast-util-select": "^3.0.1",
+    "hast-util-to-text": "^1.0.1",
     "hastscript": "^5.0.0",
     "http-server": "^0.11.1",
     "lodash.debounce": "^4.0.8",
@@ -58,6 +60,12 @@
     "lint-staged": "^8.1.4",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "src/logic.js"
+    ]
   },
   "prettier": {
     "semi": false,
