--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "yargs": "^13.2.4"
   },
   "devDependencies": {
+    "@robb_j/md-toc": "^0.3.0",
     "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
