--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@openlab/wiki-md",
   "description": "Generate a wiki from structured markdown",
   "version": "0.3.1",
-  "private": true,
   "repository": "digitalinteraction/wiki-md",
   "author": "",
   "license": "MIT",
+  "bin": "src/cli.js",
   "scripts": {
     "coverage": "npx jest --coverage --collectCoverageFrom 'src/**/*'",
     "dev": "NODE_ENV=development node src/cli.js testdir/ --base-path=dist",
